Fixed header spacing

--- a/web/themes/luigimon/css/layout/layout.css
+++ b/web/themes/luigimon/css/layout/layout.css
@@ -56,7 +56,6 @@ html body {
 
 .luigimon-page .menu-header {
     background-color: #0a58ca;
-    padding: 6px 0;
 }
 
 .luigimon-page .menu-header .region-primary-menu {
@@ -64,6 +63,8 @@ html body {
     align-items: center;
     justify-content: space-between;
     width: 100%;
+    margin: 6px 0;
+    padding: 6px 0;
 }
 
 .luigimon-page .menu-header .user-name {
